added embedding model and genai_provider for google

--- a/.env.sample
+++ b/.env.sample
@@ -12,8 +12,11 @@ AWS_REGION=
 # Azure
 AZURE_API_KEY=
 
+# Google GenAi
+GOOGLE_GEN_AI_API_KEY=...
+
 # Google Cloud
-GOOGLE_APPLICATION_CREDENTIALS=./google-adc
+GOOGLE_APPLICATION_CREDENTIALS=/Users/hayde/IdeaProjects/drools/model_server/gen-lang-client-0937262914-df36823842a7.json
 GOOGLE_REGION=
 GOOGLE_PROJECT_ID=
 
