--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ chromadb = "^0.5.4"
 sentence-transformers = "^3.0.1"
 datasets = "^2.20.0"
 vertexai = "^1.63.0"
+google-generativeai = "0.8.3"
 
 [build-system]
 requires = ["poetry-core"]
