--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,12 @@ vertexai = { version = "^1.63.0", optional = true }
 groq = { version = "^0.9.0", optional = true }
 mistralai = { version = "^1.0.3", optional = true }
 openai = { version = "^1.35.8", optional = true }
+#rerankers = { version = "0.8.0"}
+#google-cloud-discoveryengine = {version = "0.13.6" }
 
 # Optional dependencies for different providers
+google-cloud-discoveryengine = "^0.13.6"
+rerankers = "^0.8.0"
 [tool.poetry.extras]
 anthropic = ["anthropic"]
 aws = ["boto3"]
