--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,21 +13,25 @@ vertexai = { version = "^1.63.0", optional = true }
 groq = { version = "^0.9.0", optional = true }
 mistralai = { version = "^1.0.3", optional = true }
 openai = { version = "^1.35.8", optional = true }
-#rerankers = { version = "0.8.0"}
-#google-cloud-discoveryengine = {version = "0.13.6" }
+langchain = { version = "0.3.24", optional = true }
+langchain-mcp-adapters = { version = "0.0.9", optional = true }
+langgraph = { version = "0.3.34", optional = true }
+google-cloud-discoveryengine = { version = "^0.13.6", optional = true }
+google-generativeai = { version = "0.8.3", optional = true }
+rerankers = { version = "^0.8.0", optional = true }
 
 # Optional dependencies for different providers
-google-cloud-discoveryengine = "^0.13.6"
-rerankers = "^0.8.0"
 [tool.poetry.extras]
 anthropic = ["anthropic"]
 aws = ["boto3"]
 azure = []
 google = ["vertexai"]
+google-genai = ["google-cloud-discoveryengine", "google-generativeai"]
 groq = ["groq"]
 huggingface = []
 mistral = ["mistralai"]
 ollama = []
+langchain = ["langchain", "langchain-mcp-adapters", "langgraph"]
 openai = ["openai"]
 all = ["anthropic", "aws", "google", "groq", "mistral", "openai"]  # To install all providers
 
@@ -49,6 +53,9 @@ sentence-transformers = "^3.0.1"
 datasets = "^2.20.0"
 vertexai = "^1.63.0"
 google-generativeai = "0.8.3"
+langchain= "0.3.24"
+langchain-mcp-adapters= "0.0.9"
+langgraph= "0.3.34"
 
 [build-system]
 requires = ["poetry-core"]
