--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,62 +1,44 @@
-[tool.poetry]
+[project]
 name = "aisuite"
 version = "0.1.6"
 description = "Uniform access layer for LLMs"
-authors = ["Andrew Ng"]
+authors = [
+    {name = "Andrew Ng"},
+]
 readme = "README.md"
+requires-python = ">=3.10"
+dependencies = []
 
-[tool.poetry.dependencies]
-python = "^3.10"
-anthropic = { version = "^0.30.1", optional = true }
-boto3 = { version = "^1.34.144", optional = true }
-vertexai = { version = "^1.63.0", optional = true }
-groq = { version = "^0.9.0", optional = true }
-mistralai = { version = "^1.0.3", optional = true }
-openai = { version = "^1.35.8", optional = true }
-langchain = { version = "0.3.24", optional = true }
-langchain-mcp-adapters = { version = "0.0.9", optional = true }
-langgraph = { version = "0.3.34", optional = true }
-google-cloud-discoveryengine = { version = "^0.13.6", optional = true }
-google-generativeai = { version = "0.8.3", optional = true }
-rerankers = { version = "^0.8.0", optional = true }
-
-# Optional dependencies for different providers
-[tool.poetry.extras]
-anthropic = ["anthropic"]
-aws = ["boto3"]
+[project.optional-dependencies]
+anthropic = ["anthropic>=0.30.1"]
+aws = ["boto3>=1.34.144"]
 azure = []
-google = ["vertexai"]
-google-genai = ["google-cloud-discoveryengine", "google-generativeai"]
-groq = ["groq"]
+google = ["vertexai>=1.63.0"]
+google-genai = ["google-cloud-discoveryengine>=0.13.6", "google-generativeai==0.8.3"]
+groq = ["groq>=0.9.0"]
 huggingface = []
-mistral = ["mistralai"]
+mistral = ["mistralai>=1.0.3"]
 ollama = []
-langchain = ["langchain", "langchain-mcp-adapters", "langgraph"]
-openai = ["openai"]
-all = ["anthropic", "aws", "google", "groq", "mistral", "openai"]  # To install all providers
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.2"
-pre-commit = "^3.7.1"
-black = "^24.4.2"
-python-dotenv = "^1.0.1"
-openai = "^1.35.8"
-groq = "^0.9.0"
-anthropic = "^0.30.1"
-notebook = "^7.2.1"
-ollama = "^0.2.1"
-mistralai = "^1.0.3"
-boto3 = "^1.34.144"
-fireworks-ai = "^0.14.0"
-chromadb = "^0.5.4"
-sentence-transformers = "^3.0.1"
-datasets = "^2.20.0"
-vertexai = "^1.63.0"
-google-generativeai = "0.8.3"
-langchain= "0.3.24"
-langchain-mcp-adapters= "0.0.9"
-langgraph= "0.3.34"
+langchain = ["langchain==0.3.24", "langchain-mcp-adapters==0.0.9", "langgraph==0.3.34"]
+openai = ["openai>=1.35.8"]
+rerankers = ["rerankers>=0.8.0"]
+all = ["anthropic>=0.30.1", "boto3>=1.34.144", "vertexai>=1.63.0", "groq>=0.9.0", "mistralai>=1.0.3", "openai>=1.35.8", "langchain==0.3.24", "langchain-mcp-adapters==0.0.9", "langgraph==0.3.34", "google-cloud-discoveryengine>=0.13.6", "google-generativeai==0.8.3", "rerankers>=0.8.0"]
+dev = [
+    "pytest>=8.2.2",
+    "pre-commit>=3.7.1",
+    "black>=24.4.2",
+    "python-dotenv>=1.0.0",
+    "notebook>=7.2.1",
+    "ollama>=0.2.1",
+    "fireworks-ai>=0.14.0",
+    "chromadb>=0.5.4",
+    "sentence-transformers>=3.0.1",
+    "datasets>=2.20.0"
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.setuptools]
+packages = ["aisuite"]
